资源权限缓存处理 ..